tests/compile_fail/unknown_field.mtl
struct User {
    age: int
}

fn main() -> int {
    let user = User { age: 3 }
    user.name
}
